# financial-model-api-dev-tools

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: policy-enforcement.yml  validate-repo-structure.yml
.github/workflows/.github/workflows/: policy-enforcement.yml
data/inputs/: assumptions.json
docs/: ASSUMPTIONS.md  METHODOLOGY.md  architecture.md  assumptions.md  metrics_glossary.md  runbook.md
model/: README.md
notebooks/: executive_dashboard.ipynb
scripts/: compute_metrics.py  export_outputs.py  generate_inputs.py  validate_model.py
tests/: test_compute_metrics.py  test_generate_inputs.py  test_validate_model.py
