[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financial-model-api-dev-tools"
version = "1.0.0"
description = "Production-quality financial modelling toolkit for an API SaaS product"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
]

[project.scripts]
generate-inputs   = "scripts.generate_inputs:main"
compute-metrics   = "scripts.compute_metrics:main"
validate-model    = "scripts.validate_model:main"
export-outputs    = "scripts.export_outputs:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
